@@ -1,5 +1,7 @@
 2025-XX-XX   3.1.1:
 -------------------
+  * fallback on `__builtin_parityll()` in `util.parity()`
+  * add LFSR example
 
 
 2025-02-19   3.1.0:
